Bug 131931 - No version history shown
Summary: No version history shown
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-04-06 13:22 UTC by Telesto
Modified: 2020-04-14 17:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (769.64 KB, application/vnd.oasis.opendocument.text)
2020-04-06 13:23 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-04-06 13:22:48 UTC
Description:
No version history shown

Steps to Reproduce:
1. open the attached file
2. File -> Versions -> Empty (with 7.0 fine with 4.4.7.2)

Actual Results:
No version history

Expected Results:
Should be


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 4501a0ba623ad61c5a4e0b807da2e96f0e4ce82c
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Telesto 2020-04-06 13:23:05 UTC
Created attachment 159362 [details]
Example file
Comment 2 Xisco Faulí 2020-04-06 14:45:30 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=1872b44c9a2ee2bd00be54c6c310b72579d7a47f

author	Noel Grandin <noel.grandin@collabora.co.uk>	2019-11-14 15:04:42 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2019-11-15 17:13:22 +0100
commit 1872b44c9a2ee2bd00be54c6c310b72579d7a47f (patch)
tree 047ea7435b7731dc1521a9ba80b5c2f0c5d88378
parent 5d23f7748f33414a95297fa9f374a37e76de687b (diff)
use FastParser for the XMLVersionListImport

Bisected with: bibisect-linux64-6.5

Adding Cc: to Noel Grandin
Comment 3 Commit Notification 2020-04-11 19:47:36 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f53077423fe1d62eb4392dd393a9bf6df84bd517

tdf#131931 No version history shown

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2020-04-14 13:42:26 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 35fc5ef0a759884b24ed8b83cd05702a0fab64cc
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Noel, thanks for fixing this issue!
Comment 5 Commit Notification 2020-04-14 17:47:59 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6e44d68b2beba30efc48bdaf3e8f00e236bf53f2

tdf#131931: Add UItest

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.