tdf#131931 No version history shown

regression from
    commit 1872b44c9a2ee2bd00be54c6c310b72579d7a47f
    use FastParser for the XMLVersionListImport

Change-Id: Ib6e9e14758c25c6ff090fe8f929984449e045c30
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/92063
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>